test/e2e/testdata/http3.yaml
# ./certs/client-mtls-trustbundle.sh
#
# kubectl create secret generic foo-com-tls -n gateway-conformance-infra --from-file=ca.crt=example.com.crt --from-file=tls.crt=foo.example.com.crt --from-file=tls.key=foo.example.com.key --dry-run=client -o yaml > foo-com-tls.yaml
apiVersion: v1
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURWVENDQWoyZ0F3SUJBZ0lVQXFpaGJLVjBzZ240dXZwMEI1N0l3VUdNc2dBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5URXlNekV3TVRRd016bGFGdzB5TmpFeU16RXdNVFF3TXpsYU1DMHhGVEFUQmdOVkJBb01ER1Y0CllXMXdiR1VnU1c1akxqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURYVWx1ZkRkREhlSlRDS3BhUVBKV1lQRnp0Vno4bmpwcEZ4THcyWkdjOQp0N2xJNmp3MDUvZjZoan [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQwakNDQXJxZ0F3SUJBZ0lVT3pqOWVzaSt0ajVPQWxxQVViQ0NmZ0ErMVc0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5URXlNekV3TVRRd05EQmFGdzB6TlRFeU1qa3dNVFF3TkRCYU1Ea3hHREFXQmdOVkJBTU1EMlp2CmJ5NWxlR0Z0Y0d4bExtTnZiVEVkTUJzR0ExVUVDZ3dVWlhoaGJYQnNaU0J2Y21kaGJtbDZZWFJwYjI0d2dnRWkKTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFER3Z6eFpwam1zNFo0N2l5MlRyZm1QL2cwOApObjJsVFF6NlZOR2JEQ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRREd2enhacGptczRaNDcKaXkyVHJmbVAvZzA4Tm4ybFRRejZWTkdiREI1V1ZaOFoybzlSU3ZBbTdET1UrbDl0NnpsbVlhQy91TVRESWd3VApQYUVOV2ZQMXlkTmlGY0IzcXVkNVF3ejloMUFoRmpONjI0QWNSWCtNNy9YdEhESHlhNTgvNHBwbU5DVCtOUFV5ClkrSHFRSFNEcmhGTjhFTldRdkhaVTdacUcvTU9pNWQ2SHRGN20xK2hkZXY4K1F6QjlScFZSNjNJK29EMUVoVjEKeGZqeEgvQkVTdFNQZmt1eGhZWTcwclF6YkhGdGpjUE1Qd3NBQ2hFWGJzaktDUUNBbHdTQlF1SlhmcGpDVC9xVQo4TlM1RUVxTjFEL1I0S [...]
kind: Secret
metadata:
  creationTimestamp: null
  name: foo-com-tls
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
# kubectl create secret generic bar-com-tls -n gateway-conformance-infra --from-file=ca.crt=example.com.crt --from-file=tls.crt=bar.example.com.crt --from-file=tls.key=bar.example.com.key --dry-run=client -o yaml > bar-com-tls.yaml
apiVersion: v1
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURWVENDQWoyZ0F3SUJBZ0lVQXFpaGJLVjBzZ240dXZwMEI1N0l3VUdNc2dBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5URXlNekV3TVRRd016bGFGdzB5TmpFeU16RXdNVFF3TXpsYU1DMHhGVEFUQmdOVkJBb01ER1Y0CllXMXdiR1VnU1c1akxqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURYVWx1ZkRkREhlSlRDS3BhUVBKV1lQRnp0Vno4bmpwcEZ4THcyWkdjOQp0N2xJNmp3MDUvZjZoan [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQwakNDQXJxZ0F3SUJBZ0lVT3pqOWVzaSt0ajVPQWxxQVViQ0NmZ0ErMVc4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5URXlNekV3TVRRd05EQmFGdzB6TlRFeU1qa3dNVFF3TkRCYU1Ea3hHREFXQmdOVkJBTU1EMkpoCmNpNWxlR0Z0Y0d4bExtTnZiVEVkTUJzR0ExVUVDZ3dVWlhoaGJYQnNaU0J2Y21kaGJtbDZZWFJwYjI0d2dnRWkKTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEZG03NWRuL1RhOVlOa0VYNFQ4aHlYRUtOaApCM0lRZHRRR0ZqcDNtZ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktrd2dnU2xBZ0VBQW9JQkFRRGRtNzVkbi9UYTlZTmsKRVg0VDhoeVhFS05oQjNJUWR0UUdGanAzbWdaOEdaY0lwMU5pNVRJeWoybnROMWo4VmNiTVR2aUZWMWVjYzRVSgo2MWQ4cHd0YmR4L1lQQmt5bHRFV3pZU3A0Z2V5YjBRMWk2c1RIRTg4VVVMaXhGRE0za2JDWnM4RnZ4VndNUWY1ClNmSGE3ejNhUG1VVkNIdGhQLzBpOHIycnVRd1JIVDlrK2VlZGJ4eUVFUWxNVm1xUzE2U0FPSDh3Uy9rdUxCZloKcVRaMzY4eTVTTTZnbWUwaFptUVluaDdqekxQK2hRUUlGR1FGS0RhMWlLazZZZXR0Q0U4ck1pYm43MnAvTC9GWgpaQm1DMWRrbHpYVGpaV [...]
kind: Secret
metadata:
  creationTimestamp: null
  name: bar-com-tls
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
# kubectl create secret generic awesome-org-tls -n gateway-conformance-infra --from-file=ca.crt=example.com.crt --from-file=tls.crt=awesome.org.crt --from-file=tls.key=awesome.org.key --dry-run=client -o yaml > awesome-org-tls.yaml
apiVersion: v1
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURWVENDQWoyZ0F3SUJBZ0lVV29lV1V1ei9UR2IwVzc5N1Q1RVRWTUtxMkNzd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5URXlNekV3TlRVek5ESmFGdzB5TmpFeU16RXdOVFV6TkRKYU1DMHhGVEFUQmdOVkJBb01ER1Y0CllXMXdiR1VnU1c1akxqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURQZndpZmhoYVhJbVlyb1NkS094MEhoRHc3RTgyd01WK0pRWjVFNTlNOAp4dDFiWE1IMHBPZGVGZF [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQwakNDQXJxZ0F3SUJBZ0lVS3p3WWtxOW1hSkQ1bk84UmoyaktnSmNyM1lNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5URXlNekV3TlRVek5ETmFGdzB6TlRFeU1qa3dOVFV6TkROYU1Ea3hHREFXQmdOVkJBTU1EM2QzCmR5NWhkMlZ6YjIxbExtOXlaekVkTUJzR0ExVUVDZ3dVWlhoaGJYQnNaU0J2Y21kaGJtbDZZWFJwYjI0d2dnRWkKTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDM0gvQkRrS3pNN2pDQ1VLczMwM1IzRko3eApBems0N0lCWlJxaVEvN [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQzNIL0JEa0t6TTdqQ0MKVUtzMzAzUjNGSjd4QXprNDdJQlpScWlRLzZ0bFlCVjFQd1JCSFlqVkJIRklJZGFxTWphUTJuRjdHeHdkcXRSMwp3eUVaMDVnTXNMZy8zVi9oT2JyazhRUEtpdmVFeTVQbHp6YkpKNXJ3UGRHRDlqVkVjTXE1dVNrRFR3cXpjaUhBCnhUY1U2Mzl4cGhqSmNJUVVmRGRUSW8wYVlxbFlSdlc0OHJoWVo3Q3ZnTHhueWV3ZXFSL3RVcEhvSUM2VVI3YVAKMFl2MS8wTVNjODdBdnkvNTBLcVd4OWVodDRTM2VFVHpmV2tRRXlYVkF0Z1Yrd2JEZ2tEME13NzV3bU41TCtPQQplQWdmZWR1VVJVREhvZ [...]
kind: Secret
metadata:
  creationTimestamp: null
  name: www-awesome-org-tls
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
# kubectl create secret generic awesome-org-tls -n gateway-conformance-infra --from-file=ca.crt=example.com.crt --from-file=tls.crt=awesome.org.crt --from-file=tls.key=awesome.org.key --dry-run=client -o yaml > awesome-org-tls.yaml
apiVersion: v1
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURWVENDQWoyZ0F3SUJBZ0lVSG9LeGdDdFF0OXFqKzAxekpSazFvOHBHdUtZd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5URXlNekV3TXpVMk5URmFGdzB5TmpFeU16RXdNelUyTlRGYU1DMHhGVEFUQmdOVkJBb01ER1Y0CllXMXdiR1VnU1c1akxqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNqb1NQN01RVUVsMGZPMkd3Wis5RlY4eGJFSFh3TlNCUzR1cXJzMWpNVAovcWI4MGkrMDZQYU9FMG [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR6RENDQXJTZ0F3SUJBZ0lVZmJGbG1DNDBZZGY2WVBKS2hEU0REQTloL0Zvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5URXlNekV3TXpVMk5URmFGdzB6TlRFeU1qa3dNelUyTlRGYU1EVXhGREFTQmdOVkJBTU1DMkYzClpYTnZiV1V1YjNKbk1SMHdHd1lEVlFRS0RCUmxlR0Z0Y0d4bElHOXlaMkZ1YVhwaGRHbHZiakNDQVNJd0RRWUoKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBSi9ONGdUeVRyMHFqeFFaY3k5cnRLZDNuZ1R5elNaawo2WEU4b3FvVlUzOEF4R [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQ2Z6ZUlFOGs2OUtvOFUKR1hNdmE3U25kNTRFOHMwbVpPbHhQS0txRlZOL0FNUlBPelNlaWJOQXQ0bEIzZ2V0Y2w1N2NiUENFMlV6ZkxCcQpVVEZUenQ2VGhoRmYvcnU1cE56UklmVS9DdEt2NWo1S012Wi8zZk9yVzREM1AzU2s1OWQ5REpNOE1xMXpTbVF6CkRZaWYwbHFYQUtpL1ZORmFvdWJwZ2FBRVNQVG0rZUNnenBRRExhRG9xSWlRSVcrR3V3cTFCemtQY0ZobDd1STYKcityd3hHaEZDRWcwbEl1TmNOYTRIeXFtUzEvZmg1djY1QXBwdEdTcTRsRGtCRkYxZGtibElucjMzem5ReDZJLwpjbjliNlh1UHZiZUptb [...]
kind: Secret
metadata:
  creationTimestamp: null
  name: awesome-org-tls
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http3-gtw
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: https-foo
      protocol: HTTPS
      port: 443
      hostname: foo.example.com
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: foo-com-tls
    - name: https-bar
      protocol: HTTPS
      port: 443
      hostname: bar.example.com
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: bar-com-tls
    - name: https-awesome
      protocol: HTTPS
      port: 443
      hostname: "*.awesome.org"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: awesome-org-tls
    - name: https-www-awesome
      protocol: HTTPS
      port: 443
      hostname: "www.awesome.org"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: www-awesome-org-tls
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: http3-ctp
  namespace: gateway-conformance-infra
spec:
  http3:
    advertisedPort: 8443
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http3-gtw
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http3-route-foo
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: http3-gtw
  hostnames:
    - foo.example.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: infra-backend-v1
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http3-route-bar
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: http3-gtw
  hostnames:
    - bar.example.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: infra-backend-v1
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http3-route-awesome
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: http3-gtw
  hostnames:
    - "*.awesome.org"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: infra-backend-v1
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
